# Ultimate-AI-Recruiter

./: .gitignore  README.md  app.py  build_index.py  preprocess.py  pyproject.toml  rank.py  requirements.txt  submission_metadata.yaml  validate.py
Presentation/: Redrob_AI_Recruiter_Presentation.pptx
config/: companies.yaml  features.yaml  ontology.yaml  paths.yaml  ranking.yaml  weights.yaml
scripts/: check_submission.py
src/: __init__.py
src/behavior/: __init__.py  behavioral_intelligence.py  behavioral_scorer.py  honeypot_detector.py
src/config/: __init__.py  loader.py
src/evaluation/: __init__.py  metrics.py
src/feature_engineering/: __init__.py  career_evidence.py  career_progression.py  career_scorer.py  company_classifier.py  experience_scorer.py  feature_builder.py  skill_ontology.py  skill_scorer.py
src/models/: __init__.py  candidate.py  job_description.py
src/pipeline/: __init__.py  ranking_pipeline.py
src/preprocessing/: __init__.py  data_loader.py  jd_parser.py
src/ranking/: __init__.py  ltr_ranker.py  ranker.py
src/reasoning/: __init__.py  reason_generator.py
src/retrieval/: __init__.py  embedding_builder.py  hybrid_retriever.py
src/utils/: __init__.py  logger.py  timing.py
streamlit_app/: components.py  theme.py
tests/: __init__.py  test_pipeline.py
